Fix packing list overflowing on screens less than 400px

--- a/src/app/pages/packing-list/packing-list.component.scss
+++ b/src/app/pages/packing-list/packing-list.component.scss
@@ -8,6 +8,10 @@
   box-sizing: border-box;
   background-color: #eee;
 
+  #pl-container {
+    max-width: 100%;
+  }
+
   .tab-icon {
     margin-right: 8px;
   }
